SERVER-6766 Properly serialize DocumentSourceGroup for transmission to shards.