src/mongo/db/pipeline/accumulator.cpp
@@ -38,17 +38,17 @@ namespace mongo {
 
     void Accumulator::opToBson(
         BSONObjBuilder *pBuilder, string opName,
-        string fieldName) const {
+        string fieldName, bool requireExpression) const {
         verify(vpOperand.size() == 1);
         BSONObjBuilder builder;
-        vpOperand[0]->addToBsonObj(&builder, opName, false);
+        vpOperand[0]->addToBsonObj(&builder, opName, requireExpression);
         pBuilder->append(fieldName, builder.done());
     }
 
     void Accumulator::addToBsonObj(
         BSONObjBuilder *pBuilder, string fieldName,
         bool requireExpression) const {
-        opToBson(pBuilder, getOpName(), fieldName);
+        opToBson(pBuilder, getOpName(), fieldName, requireExpression);
     }
 
     void Accumulator::addToBsonArray(BSONArrayBuilder *pBuilder) const {
