src/mongo/db/pipeline/document_source_group.cpp
@@ -72,14 +72,14 @@ namespace mongo {
         BSONObjBuilder insides;
 
         /* add the _id */
-        pIdExpression->addToBsonObj(&insides, Document::idName.c_str(), false);
+        pIdExpression->addToBsonObj(&insides, Document::idName.c_str(), true);
 
         /* add the remaining fields */
         const size_t n = vFieldName.size();
         for(size_t i = 0; i < n; ++i) {
             intrusive_ptr<Accumulator> pA((*vpAccumulatorFactory[i])(pExpCtx));
             pA->addOperand(vpExpression[i]);
-            pA->addToBsonObj(&insides, vFieldName[i], false);
+            pA->addToBsonObj(&insides, vFieldName[i], true);
         }
 
         pBuilder->append(groupName, insides.done());
